add working post method
