# src/controllers/posts/post.interface.ts
@@ -1,8 +1,13 @@
-interface IPost {
+/**
+ * This is a description of a model
+ * @tsoaModel
+ **/
+
+interface Blog {
     id: number
     author: string
     content: string
     title: string
 }
 
-export default IPost
+export default Blog
