# src/controllers/posts/posts.controller.ts
@@ -1,5 +1,5 @@
 import * as express from 'express'
-import IPost from './post.interface'
+import Blog from './post.interface'
 import {
     Body,
     Controller,
@@ -7,17 +7,23 @@ import {
     Path,
     Post,
     Route,
+    Response,
     SuccessResponse,
 } from "tsoa";
 /**
  * Example Express Controller. This demonstrates POST, GET, and GET :id
  */
+interface ValidateErrorJSON {
+    message: "Validation failed";
+    details: { [name: string]: unknown };
+}
+
 @Route("posts")
 export class PostsController extends Controller {
     public path = '/posts'
     public router = express.Router()
 
-    private posts: IPost[] = [
+    private posts: Blog[] = [
         {
             id: 1,
             author: 'compoze',
@@ -27,9 +33,9 @@ export class PostsController extends Controller {
     ]
 
     @Get("{id}")
-    public async getPost(@Path() id: number): Promise<IPost> {
+    public async getPost(@Path() id: number): Promise<Blog> {
 
-        let result: IPost = this.posts.find(post => post.id == id)
+        let result: Blog = this.posts.find(post => post.id == id)
 
         if (!result) {
             this.setStatus(404);
@@ -40,16 +46,20 @@ export class PostsController extends Controller {
     }
 
     @Get()
-    public async getAllPosts(): Promise<IPost[]> {
+    public async getAllPosts(): Promise<Blog[]> {
 
         return this.posts;
     }
 
+    @Response<ValidateErrorJSON>(422, "Validation Failed")
     @SuccessResponse("201", "Created") // Custom success response
     @Post()
-    public async createPost(@Body() post: IPost): Promise<IPost[]> {
+    public async createPost(@Body() blog: Blog): Promise<Blog[]> {
 
-        this.posts.push(post);
+        console.log('hhelo');
+        this.posts.push(blog);
+
+        this.setStatus(201);
         return this.posts;
     }
 }
